# llm_from_scratch

./: .gitignore  README.md  pyproject.toml
src/: dataloader.py  dropout.py  embedding.py  feed_forward.py  mha.py  mhsa.py  model.py  optimizer.py  scaled_attention.py  tokenizer.py  train.py
src/scripts/: pretokenize.py  wmt16_en_de.sh
