[project]
name = "llm-from-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "importlib-resources>=7.1.0",
    "tensorflow-datasets>=4.9.10",
]
[project.optional-dependencies]
cpu = [
  "jax>0.10.0",
  "tensorflow>=2.21.0",
]
gpu = [
  "jax[cuda13]>=0.10.0",
  "tensorflow[and-cuda]>=2.21.0",
]
