[project]
name = "llm-from-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "importlib-resources>=7.1.0",
    "pandas>=3.0.3",
    "tensorboard>=2.20.0",
    "tensorflow-datasets>=4.9.10",
    "torch>=2.12.1",
    "torchaudio>=2.11.0",
    "torchvision>=0.27.1",
    "tqdm>=4.67.3",
]
[project.optional-dependencies]
cpu = [
  "jax>0.10.0",
  "tensorflow>=2.21.0",
]
gpu = [
  "jax[cuda13]>=0.10.0",
  "tensorflow[and-cuda]>=2.21.0",
]
